--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -51,6 +52,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "google-auth-library": "^9.15.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
